Implementación de docker y despliegue